업데이트 오타 및 내용 추가

--- a/2.Regression_Analysis/BasicModel.ipynb
+++ b/2.Regression_Analysis/BasicModel.ipynb
@@ -105,11 +105,16 @@
     "**2단계 오차함수 작성**\n",
     "> * tf.square(x) : x를 제곱함, x*x = x^2\n",
     "> * tf.reduce_mean() : 텐서의 차원에서 요소들의 평균을 구함,(np.mean 과 동일)\n",
-    "> <pre><code>x = tf.constant([[1., 1.], [2., 2.]])</code></pre>\n",
-    "> <pre><code>x = tf.reduce_mean(x)  # 1.5</code></pre>\n",
-    "> <pre><code>x = tf.reduce_mean(x, 0)  # [1.5, 1.5]</code></pre>\n",
-    "> <pre><code>x = tf.reduce_mean(x)  # 1.5</code></pre>\n",
-    "> <pre><code>x = tf.reduce_mean(x, 1)  # [1.,  2.]</code></pre>"
+    "> <pre><code>x = [[1.,2.] ,[3.,4.],[5.,6.]]</code></pre>\n",
+    "> <pre><code>tf.reduce_mean(x)  # 3.5 => (1.5 + 3.5+ 5.5)/3 </code></pre>\n",
+    "> <pre><code>tf.reduce_mean(x, 0)  # [3. 4.] => [(1+3+5)/3, (2+4+6)/3] </code></pre>\n",
+    "> <pre><code>tf.reduce_mean(x, 1)  # [1.5 3.5 5.5] => [(1+2)/2 (3+4)/2 (5+6)/2] </code></pre>\n",
+    "\n",
+    "> * tf.reduce_sum() : 텐서의 차원에서 요소들의 합\n",
+    "> <pre><code>x = [[1,2,3],[4,5,6]]</code></pre>\n",
+    "> <pre><code>tf.reduce_sum(x) # 21 => (1+2+3+4+5+6) </code></pre>\n",
+    "> <pre><code>tf.reduce_sum(x,0) # [5 7 9] =>[(1+4),(2+5),(3+9)] </code></pre>\n",
+    "> <pre><code>tf.reduce_sum(x,1) #[6 15] => [(1+2+3),(4+5+6)] </code></pre>"
    ]
   },
   {
@@ -173,16 +178,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step : 10, cost(loss) : 0.955631 \n",
-      "Step : 20, cost(loss) : 0.674285 \n",
-      "Step : 30, cost(loss) : 0.537948 \n",
-      "Step : 40, cost(loss) : 0.463722 \n",
-      "Step : 50, cost(loss) : 0.423307 \n",
-      "Step : 60, cost(loss) : 0.401302 \n",
-      "Step : 70, cost(loss) : 0.389321 \n",
-      "Step : 80, cost(loss) : 0.382797 \n",
-      "Step : 90, cost(loss) : 0.379246 \n",
-      "Step : 100, cost(loss) : 0.377312 \n"
+      "Step : 10, cost(loss) : 0.973418 \n",
+      "Step : 20, cost(loss) : 0.685366 \n",
+      "Step : 30, cost(loss) : 0.543983 \n",
+      "Step : 40, cost(loss) : 0.467008 \n",
+      "Step : 50, cost(loss) : 0.425096 \n",
+      "Step : 60, cost(loss) : 0.402276 \n",
+      "Step : 70, cost(loss) : 0.389851 \n",
+      "Step : 80, cost(loss) : 0.383086 \n",
+      "Step : 90, cost(loss) : 0.379403 \n",
+      "Step : 100, cost(loss) : 0.377397 \n"
      ]
     }
    ],
@@ -212,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.4611833] [-0.8858747]\n"
+      "[3.4604714] [-0.8837808]\n"
      ]
     }
    ],
@@ -239,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "예측값 :  [33.725956]\n"
+      "예측값 :  [33.720932]\n"
      ]
     }
    ],
